--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
     --header-color: #24292e;
     --white-color: #ffffff;
+    --border-color: #444d56;
 }
 
 * {
@@ -10,7 +11,7 @@
 }
 
 body, html {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
     font-size: 10px;
     line-height: 1.5;
 }
@@ -18,13 +19,88 @@ body, html {
 .header {
     height: 6rem;
     background-color: var(--header-color);
-    padding: 0 2rem;
+    padding: 0 4rem;
     display: flex;
     align-items: center;
 }
 
-.nav {
-    background-color: yellowgreen;
-    height: 2rem;
+.search-bar {
+    width: 30rem;
+    margin: 0 3rem;
+    border: 1px solid var(--border-color);
+    border-radius: .5rem;
+    height: 3rem;
+    display: flex;
+}
+
+.search {
+    background: transparent;
+    border: none; 
+    height: inherit;
+    color: var(--white-color);
+    padding: 0 2rem;
     flex: 1;
+}
+
+.search:focus {
+    outline: none;
+}
+
+.search-icon {
+    margin-right: 1rem;
+    align-self: center;
+}
+
+.nav {
+    width: 32rem;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-item {
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+
+.nav-link {
+    text-decoration: none;
+    color: var(--white-color);
+}
+
+.buttons {
+    height: 4rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: auto;
+    width: 12rem;
+}
+
+.buttons button {
+    height: 1.8rem; 
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.buttons button img {
+    height: 100%;
+}
+
+button.more img {
+    height: 70%;
+}
+
+button.more img:last-of-type,
+button.profile img:last-of-type {
+    margin-top: .5rem;
+    margin-left: .6rem;
+    height: 60%;
+}
+
+button.profile img:first-child {
+    border-radius: 50%;
 }
