--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body, html {
 
 .search-bar {
     width: 30rem;
-    margin: 0 3rem;
+    margin: 0 2rem;
     border: 1px solid var(--border-color);
     border-radius: .5rem;
     height: 3rem;
@@ -103,4 +103,56 @@ button.profile img:last-of-type {
 
 button.profile img:first-child {
     border-radius: 50%;
+}
+
+.container {
+    height: 20rem;
+    max-width: 120rem;
+    margin: 2rem auto;
+    display: grid;
+    grid-template-columns: 1.1fr 3fr;
+    gap: 2rem;
+    min-height: 100vh;
+}
+
+.profile-img {
+    position: relative;
+}
+
+.profile-img > img {
+    width: 26rem;
+    border-radius: 50%;
+}
+
+.main {
+    background-color: violet;
+}
+
+.smiley {
+    background-color: var(--white-color);
+    width: 3rem;
+    height: 3rem;
+    padding: .7rem;
+    border-radius: 50%;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
+    position: absolute;
+    bottom: 5rem;
+    right: 5rem;
+}
+
+.profile-info {
+    margin-top: 2rem;
+}
+
+.profile-info h1 {
+    font-size: 2.5rem;
+}
+
+.profile-info h2 {
+    font-weight: 300;
+}
+
+.profile-info p {
+    margin-top: 1rem;
+    font-size: 1.3rem;
 }
