--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,6 @@ button.profile img:first-child {
 }
 
 .container {
-    height: 20rem;
     max-width: 120rem;
     margin: 2rem auto;
     display: grid;
@@ -307,4 +306,90 @@ button.profile img:first-child {
 
 .repo-dart {
     background-color: #00B4AB;
+}
+
+
+@media screen and (max-width: 769px){
+    .header {
+        padding: 0 2rem;
+    }
+    
+    .search-bar {
+        width: 25rem;
+        margin: 0 1rem;
+    }
+    
+    .search {
+        padding: 0 1rem;
+    }
+    
+    .nav {
+        width: 30rem;
+    }
+    
+    .nav-item {
+        font-size: 1.4rem;
+    }
+    
+    .buttons {
+        width: 10rem;
+    }
+    
+    .buttons button img {
+        height: 80%;
+    }
+    
+    .container {
+        max-width: 120rem;
+        grid-template-columns: 1fr 2.5fr;
+        gap: 1rem;
+        margin: 2rem;
+    }
+    
+    .profile-img > img {
+        width: 17rem;
+    }
+    
+    
+    .smiley {
+        display: none;
+    }
+    
+    .profile-info {
+        margin-top: 2rem;
+    }
+    
+    .profile-info h1 {
+        font-size: 3.1rem;
+        font-weight: 600;
+    }
+
+    .profile-info p {
+        padding-right: 3.5rem;
+    }
+
+    .repo-search-bar {
+        padding: 0;
+    }
+    
+    .repo-info {
+        width: 45rem;
+    }
+
+    .repo-description {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        padding-right: 12rem;
+        display: inline-block;
+    }
+    
+    .repo-detail {
+        margin-top: .3rem;
+    }
+    
+    .repo-star {
+        margin-top: 0;
+        align-self: center;
+    }
+    
 }
