--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,7 @@ button.profile img:first-child {
     color: var(--text-color);
 }
 
-.profile-info p {
+.profile-desc {
     margin-top: 1rem;
     font-size: 1.6rem;
 }
@@ -366,7 +366,6 @@ button.profile img:first-child {
     }
     
     .container {
-        max-width: 120rem;
         grid-template-columns: 1fr 2.5fr;
         gap: 1rem;
         margin: 2rem;
@@ -390,7 +389,7 @@ button.profile img:first-child {
         font-weight: 600;
     }
 
-    .profile-info p {
+    .profile-desc {
         padding-right: 3.5rem;
     }
 
@@ -426,10 +425,6 @@ button.profile img:first-child {
         flex-wrap: wrap;
         justify-content: space-between;
     }
-
-    .header.d-none .dn {
-        display: none;
-    }
     
     .hamburger {
         display: flex;
@@ -440,6 +435,7 @@ button.profile img:first-child {
         margin: 2rem 0;
         height: 3rem;
         order: 1;
+        display: none;
     }
     
     .search {
@@ -454,6 +450,11 @@ button.profile img:first-child {
         width: 100%;
         flex-direction: column;
         order: 2;
+        display: none;
+    }
+
+    .header.show .db {
+        display: block;
     }
     
     .nav-item {
@@ -479,8 +480,6 @@ button.profile img:first-child {
         height: 1.3rem;
         margin-right: .7rem;
     }
-
-
     
     .buttons {
         width: auto;
@@ -496,164 +495,64 @@ button.profile img:first-child {
     }
     
     .container {
-        max-width: 120rem;
-        margin: 2rem auto;
-        display: grid;
-        grid-template-columns: 1.2fr 3fr;
-        gap: 2rem;
-        min-height: 100vh;
+        margin: 2rem;
+        grid-template-columns: 1fr;
+        min-height: auto;
     }
-    
-    .profile-img {
-        position: relative;
+
+    .aside {
+        display: flex;
+        flex-wrap: wrap;
     }
     
     .profile-img > img {
-        width: 27rem;
-        border-radius: 50%;
-    }
-    
-    
-    .smiley {
-        background-color: var(--white-color);
-        width: 3rem;
-        height: 3rem;
-        padding: .7rem;
-        border-radius: 50%;
-        box-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
-        position: absolute;
-        bottom: 5rem;
-        right: 8rem;
+        width: 5.8rem;
+        margin-right: 2rem;
     }
     
     .profile-info {
-        margin-top: 2rem;
+        margin-top: 0;
     }
     
     .profile-info h1 {
-        font-size: 2.5rem;
-    }
-    
-    .profile-info h2 {
-        font-weight: 300;
         font-size: 2rem;
-        color: var(--text-color);
     }
-    
-    .profile-info p {
-        margin-top: 1rem;
-        font-size: 1.6rem;
+
+    .profile-desc {
+        margin-top: 3rem;
+        padding: 0;
+        font-size: 1.5rem;
     }
     
     .main {
-        margin-bottom: 5rem;
+        margin-bottom: 0;
     }
-    
-    .repo-search-bar {
-        padding: 0 1rem;
-        border-bottom: 1px solid var(--line-color);
-    }
-    
-    .repo-search {
-        height: 3.5rem;
-        width: 100%;
-        margin: 2rem 0;
-        padding: 0 1rem;
-        border-radius: .7rem;
-        border: 1px solid var(--input-color);
-    }
-    
-    .repo-search:focus {
-        outline: none;
-    }
-    
-    .repo-count {
-        padding: 2rem 0;
-        border-bottom: 1px solid var(--line-color);
-        font-size: 1.5rem;
-        color: var(--text-color);
-        display: inline-block;
-    }
-    
-    .repo-count span {
-        font-weight: bold;
-    }
-    
-    .repo {
-        border-bottom: 1px solid var(--line-color);
-        padding: 3rem 0;
-        display: flex;
-        justify-content: space-between;
-    }
-    
-    .repo-info {
-        width: 50rem;
-        padding-right: 3rem;
-    }
+
     .repo-name {
-        color: var(--repo-color);
-        font-size: 1.95rem;
-        cursor: pointer;
+        word-break: break-all;
+    }
+
+    .repo-info {
+        width: auto;
+        padding-right: 0;
+        flex: 1;
     }
     
     .repo-description {
-        color: var(--text-color);
-        font-size: 1.4rem;
+        padding: 0;
     }
     
     .repo-detail {
         margin-top: 1rem;
-        display: flex;
-        align-items: center;
-        color: var(--text-color);
+        flex-wrap: wrap;
     }
     
     .repo-detail small {
-        margin-right: 2rem;
-        font-size: 1.2rem;
+        word-break: break-all;
     }
     
     .repo-detail img {
         width: 1.5rem;
         margin-right: .5rem;
-    }
-    
-    .repo-color {
-        display: inline-block;
-        background-color: #178600;
-        height: 1.5rem;
-        width: 1.5rem;
-        border-radius: 50%;
-        margin-right: 1rem;
-    }
-    
-    .svg {
-        display: inline-block;
-        overflow: visible !important;
-        vertical-align: text-bottom;
-        fill: currentColor;
-        margin-right: .5rem;
-        width: 1.5rem;
-    }
-    
-    .repo-star {
-        width: 6.5rem;
-        height: 2.8rem;
-        margin-top: .5rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: var(--star-bg);
-        border: 1px solid rgba(27, 31, 35, 0.15);
-        border-radius: .5rem;
-        font-size: 1.2rem;
-        font-weight: 300;
-        color: var(--header-color);
-        cursor: pointer;
-    }
-    
-    .repo-star img {
-        width: 1.3rem;
-        margin-right: 1rem;
     }
 }
